[gd_scene load_steps=5 format=3 uid="uid://dlow1lrd6on83"]

[ext_resource type="Script" uid="uid://75vvr2f4gdks" path="res://scripts/pause_menu.gd" id="1_5d2l8"]
[ext_resource type="FontFile" uid="uid://bd7ycu7flaw3v" path="res://assets/Calamity Regular.otf" id="1_myx47"]
[ext_resource type="StyleBox" uid="uid://mkposx5o0hdp" path="res://styles/play_button.tres" id="2_kukqi"]
[ext_resource type="Texture2D" uid="uid://dx5ao8gwpqu0h" path="res://assets/meeples/blue-1.png" id="3_kukqi"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_5d2l8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.392157)

[node name="ButtonPlay" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -843.0
offset_top = 71.0
offset_right = -512.0
offset_bottom = 201.0
grow_horizontal = 2
theme_override_constants/outline_size = 20
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("1_myx47")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_kukqi")
theme_override_styles/disabled_mirrored = ExtResource("2_kukqi")
theme_override_styles/disabled = ExtResource("2_kukqi")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_kukqi")
theme_override_styles/hover_pressed = ExtResource("2_kukqi")
theme_override_styles/hover_mirrored = ExtResource("2_kukqi")
theme_override_styles/hover = ExtResource("2_kukqi")
theme_override_styles/pressed_mirrored = ExtResource("2_kukqi")
theme_override_styles/pressed = ExtResource("2_kukqi")
theme_override_styles/normal_mirrored = ExtResource("2_kukqi")
theme_override_styles/normal = ExtResource("2_kukqi")
text = "play"

[node name="ButtonMainMenu" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 117.0
offset_top = -127.0
offset_right = 568.0
offset_bottom = -62.0
grow_vertical = 0
theme_override_constants/outline_size = 20
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("1_myx47")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("2_kukqi")
theme_override_styles/disabled_mirrored = ExtResource("2_kukqi")
theme_override_styles/disabled = ExtResource("2_kukqi")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_kukqi")
theme_override_styles/hover_pressed = ExtResource("2_kukqi")
theme_override_styles/hover_mirrored = ExtResource("2_kukqi")
theme_override_styles/hover = ExtResource("2_kukqi")
theme_override_styles/pressed_mirrored = ExtResource("2_kukqi")
theme_override_styles/pressed = ExtResource("2_kukqi")
theme_override_styles/normal_mirrored = ExtResource("2_kukqi")
theme_override_styles/normal = ExtResource("2_kukqi")
text = "main-menu (m)"
alignment = 0

[node name="ButtonRestart" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -393.0
offset_top = 71.0
offset_right = -104.0
offset_bottom = 136.0
grow_horizontal = 0
theme_override_constants/outline_size = 20
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("1_myx47")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("2_kukqi")
theme_override_styles/disabled_mirrored = ExtResource("2_kukqi")
theme_override_styles/disabled = ExtResource("2_kukqi")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_kukqi")
theme_override_styles/hover_pressed = ExtResource("2_kukqi")
theme_override_styles/hover_mirrored = ExtResource("2_kukqi")
theme_override_styles/hover = ExtResource("2_kukqi")
theme_override_styles/pressed_mirrored = ExtResource("2_kukqi")
theme_override_styles/pressed = ExtResource("2_kukqi")
theme_override_styles/normal_mirrored = ExtResource("2_kukqi")
theme_override_styles/normal = ExtResource("2_kukqi")
text = "restart (r)"
alignment = 2

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -65.0
offset_right = 285.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("1_myx47")
theme_override_font_sizes/font_size = 100
text = "game-paused."
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1682, 869)
texture = ExtResource("3_kukqi")

[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="ButtonRestart" to="." method="_on_button_restart_pressed"]
